--- a/.github/workflows/jmeter.yml
+++ b/.github/workflows/jmeter.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/upload-artifact@v4
 
       - name: Set up JDK 11
         uses: actions/setup-java@v3
