--- a/.github/workflows/jmeter.yml
+++ b/.github/workflows/jmeter.yml
@@ -2,36 +2,35 @@ name: JMeter Test
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
+    branches: [ main ]
 
 jobs:
   jmeter:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
-        uses: actions/upload-artifact@v4
+        uses: actions/checkout@v4
 
       - name: Set up JDK 11
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
-          java-version: '11'
-          distribution: 'temurin'
+          distribution: temurin
+          java-version: 11
 
       - name: Download JMeter
         run: |
-          wget https://archive.apache.org/dist/jmeter/binaries/apache-jmeter-5.5.tgz
-          tar -xvzf apache-jmeter-5.5.tgz
-          mv apache-jmeter-5.5 jmeter
+          curl -L https://archive.apache.org/dist/jmeter/binaries/apache-jmeter-5.6.3.tgz -o jmeter.tgz
+          tar -xvzf jmeter.tgz
+          mv apache-jmeter-5.6.3 jmeter
 
-      - name: Run JMeter Test
+      - name: Run JMeter Tests
         run: |
-          ./jmeter/bin/jmeter -n -t soho.jmx -l result.jtl -e -o results-html
+          ./jmeter/bin/jmeter -n -t tests/your-test-plan.jmx -l result/result.jtl -e -o result/report
 
-      - name: Upload JMeter Results
-        uses: actions/upload-artifact@v3
+      - name: Upload Test Results
+        uses: actions/upload-artifact@v4
         with:
-          name: jmeter-report
-          path: results-html
+          name: jmeter-results
+          path: result/
