--- a/.github/workflows/jmeter.yml
+++ b/.github/workflows/jmeter.yml
@@ -1,14 +1,15 @@
-name: JMeter Test
+name: JMeter Tests
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ main ]
+    branches: [ "main" ]
 
 jobs:
   jmeter:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -16,8 +17,8 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v4
         with:
-          distribution: temurin
-          java-version: 11
+          java-version: '11'
+          distribution: 'temurin'
 
       - name: Download JMeter
         run: |
@@ -27,6 +28,7 @@ jobs:
 
       - name: Run JMeter Tests
         run: |
+          mkdir -p result/report
           ./jmeter/bin/jmeter -n -t tests/your-test-plan.jmx -l result/result.jtl -e -o result/report
 
       - name: Upload Test Results
